@@ -56,6 +56,19 @@ namespace gui
 		//! Returns the customized source rectangle of the image to be used.
 		/** By default an empty rectangle of width and height 0 is returned which means the full image is used. */
 		virtual core::rect<s32> getSourceRect() const = 0;
+
+		//! Restrict drawing-area.
+		/** This allows for example to use the image as a progress bar.
+			Base for area is the image, which means:
+			-  The original clippping area when the texture is scaled or there is no texture.
+			-  The source-rect for an unscaled texture (but still restricted afterwards by the clipping area)
+			Unlike normal clipping this does not affect the gui-children.
+			\param drawBoundUVs: Coordinates between 0 and 1 where 0 are for left+top and 1 for right+bottom
+		*/
+		virtual void setDrawBounds(const core::rect<f32>& drawBoundUVs = core::rect<f32>(0.f, 0.f, 1.f, 1.f)) = 0;
+
+		//! Get drawing-area restrictions.
+		virtual core::rect<f32> getDrawBounds() const = 0;
 	};
 
 
@@ -63,4 +76,3 @@ namespace gui
 } // end namespace irr
 
 #endif
-
