@@ -261,21 +261,34 @@ void CGUIButton::draw()
 		if (DrawBorder)
 			skin->draw3DButtonPanePressed(this, AbsoluteRect, &AbsoluteClippingRect);
 
-		if (PressedImage)
+		video::ITexture * imgPressed = PressedImage;
+		core::rect<s32> rectPressed(PressedImageRect);
+		bool movePos = false;	// pressed-down effect by moving the image
+		if (!imgPressed && Image)
+		{
+			imgPressed = Image;
+			rectPressed = ImageRect;
+			movePos = true;
+		}
+		else if (Image == PressedImage && PressedImageRect == ImageRect)
+		{
+			movePos = true;
+		}
+		if (imgPressed)
 		{
 			core::position2d<s32> pos = spritePos;
-			pos.X -= PressedImageRect.getWidth() / 2;
-			pos.Y -= PressedImageRect.getHeight() / 2;
+			pos.X -= rectPressed.getWidth() / 2;
+			pos.Y -= rectPressed.getHeight() / 2;
 
-			if (Image == PressedImage && PressedImageRect == ImageRect)
+			if (movePos)
 			{
 				pos.X += skin->getSize(EGDS_BUTTON_PRESSED_IMAGE_OFFSET_X);
 				pos.Y += skin->getSize(EGDS_BUTTON_PRESSED_IMAGE_OFFSET_Y);
 			}
-			driver->draw2DImage(PressedImage,
+			driver->draw2DImage(imgPressed,
 					ScaleImage? AbsoluteRect :
-						core::recti(pos, PressedImageRect.getSize()),
-					PressedImageRect, &AbsoluteClippingRect,
+						core::recti(pos, rectPressed.getSize()),
+					rectPressed, &AbsoluteClippingRect,
 					0, UseAlphaChannel);
 		}
 	}
@@ -377,9 +390,6 @@ void CGUIButton::setImage(video::ITexture* image)
 	Image = image;
 	if (image)
 		ImageRect = core::rect<s32>(core::position2d<s32>(0,0), image->getOriginalSize());
-
-	if (!PressedImage)
-		setPressedImage(Image);
 }
 
 
